--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             },
             colors: {
               brand: {
-                orange: '#E86C00',
-                amber: '#F59E0B',
+                primary: '#AD85FE', // Light Purple
+                secondary: '#2D364C', // Dark Navy
+                accent: '#9F7AEA', // Slightly darker purple for text if needed
               }
             }
           }
@@ -25,6 +26,9 @@
       }
     </script>
     <style>
+      html {
+        scroll-behavior: smooth;
+      }
       body {
         background-color: #FAFAFA;
       }
@@ -40,7 +44,9 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0"
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
